patch: fix showing text day (sunday as a first day of week) and overflow ellipsis on two line for current state

--- a/src/components/CurrentCondition/CurrentCondition.scss
+++ b/src/components/CurrentCondition/CurrentCondition.scss
@@ -20,10 +20,11 @@
       font-weight: 800;
       line-height: 24px;
       text-align: left;
-
       text-overflow: ellipsis;
       overflow: hidden;
-      white-space: nowrap;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
 
     }
   }
